# FishOS

./: .gitignore  .gitmodules  Jinxfile  LICENSE  Makefile  NOTICE.md  README.md  compile_flags.txt  jinx-config  jinx-config-debug  limine.cfg  linker.ld  qemu-prof.sh
base-files/etc/: bash.bashrc  group  hostname  hosts  passwd  profile  slim.conf  system.jwmrc
base-files/root/: .mate-terminal-profile  .xinitrc
build-support/: CMakeToolchain-x86_64.txt  CMakeToolchain.txt  checkunbuilt.sh  config.guess  config.sub  cross_file.txt  limine.conf  makeiso.sh
build-support/jwm/: system.jwmrc
distro-files/: limine.conf  makeiso.sh
distro-files/root/: .xinitrc
host-recipes/: cmake  gcc  gnulib  libtool  xorg-font-util
initramfs/: test.txt
initramfs/hello/: world.txt
kernel/: compile_flags.txt  linker.ld  meson.build  ter-u16b.psf  ter-u16n.psf
kernel/src/: kernel.cpp  limine.hpp  panic.hpp  ubsan.cpp
kernel/src/acpi/: tables.cpp  tables.hpp
kernel/src/cpu/: cpu.cpp  cpu.hpp
kernel/src/cpu/gdt/: gdt.cpp  gdt_flush.asm
kernel/src/cpu/interrupts/: apic.cpp  apic.hpp  gate_wrappers.asm  idt.cpp  idt.hpp  interrupts.cpp  interrupts.hpp  pic.cpp  pic.hpp
kernel/src/cpu/syscall/: syscall.cpp  syscall.hpp  syscall_entry.asm  syscalls.inc
kernel/src/dev/: block.cpp  block.hpp  console.cpp  console.hpp  device.cpp  device.hpp  devnode.cpp  devnode.hpp  io_service.cpp  io_service.hpp  net.cpp  net.hpp  pci.cpp  pci.hpp  simple_char.hpp  virtio.cpp  virtio.hpp
kernel/src/dev/input/: evdev.cpp  evdev.hpp  input.cpp  input.hpp
kernel/src/dev/input/ps2/: keyboard.cpp  mouse.cpp  ps2.cpp  ps2.hpp
kernel/src/dev/tty/: console.cpp  console.hpp  pty.cpp  pty.hpp  tty.cpp  tty.hpp
kernel/src/fs/: initramfs.cpp  initramfs.hpp  procfs.cpp  procfs.hpp  tmpfs.cpp  tmpfs.hpp  vfs.cpp  vfs.hpp
kernel/src/gfx/: framebuffer.cpp  framebuffer.hpp  terminal.cpp  terminal.hpp
kernel/src/klib/: algorithm.hpp  async.hpp  bitmap.hpp  common.hpp  coroutine.hpp  cppruntime.cpp  cstdio.cpp  cstdio.hpp  cstdlib.cpp  cstdlib.hpp  cstring.cpp  cstring.hpp  functional.hpp  hashtable.hpp  list.hpp  lock.hpp  mem.asm  ring_buffer.hpp  span.hpp  timespec.hpp  vector.hpp
kernel/src/mem/: bump.cpp  bump.hpp  pmm.cpp  pmm.hpp  vmem.cpp  vmem.hpp  vmm.cpp  vmm.hpp
kernel/src/sched/: context.cpp  context.hpp  event.cpp  event.hpp  sched.cpp  sched.hpp  time.cpp  time.hpp
kernel/src/sched/timer/: apic_timer.cpp  apic_timer.hpp  hpet.cpp  hpet.hpp  pit.cpp  pit.hpp
kernel/src/userland/: cred.cpp  cred.hpp  elf.cpp  elf.hpp  epoll.cpp  epoll.hpp  eventfd.cpp  eventfd.hpp  futex.cpp  futex.hpp  info.cpp  info.hpp  inotify.cpp  inotify.hpp  pid.cpp  pid.hpp  pipe.cpp  pipe.hpp  signal.cpp  signal.hpp  socket.cpp  socket.hpp
kernel/src/userland/socket/: socket.cpp  socket.hpp  tcp.cpp  tcp.hpp  udp.cpp  udp.hpp
kernel/src/userland/socket/local/: datagram.cpp  datagram.hpp  stream.cpp  stream.hpp
patches/alsa-lib/: jinx-working-patch.patch
patches/autoconf/: jinx-working-patch.patch
patches/binutils/: jinx-working-patch.patch
patches/fontconfig/: jinx-working-patch.patch
patches/gcc-host/: jinx-working-patch.patch
patches/gdb/: jinx-working-patch.patch
patches/glib/: jinx-working-patch.patch
patches/glib2/: jinx-working-patch.patch
patches/graphite2/: jinx-working-patch.patch
patches/gtk+-3/: jinx-working-patch.patch
patches/jansson/: jinx-working-patch.patch
patches/libarchive/: jinx-working-patch.patch
patches/libevdev/: jinx-working-patch.patch
patches/libgcrypt/: jinx-working-patch.patch
patches/libgtop/: jinx-working-patch.patch
patches/libtool/: jinx-working-patch.patch
patches/libxfont2/: jinx-working-patch.patch
patches/llvm/: jinx-working-patch.patch
patches/llvm-libs/: jinx-working-patch.patch
patches/mangohud/: jinx-working-patch.patch
patches/mesa/: jinx-working-patch.patch
patches/mesa-demos/: jinx-working-patch.patch
patches/mlibc/: jinx-working-patch.patch
patches/moon-buggy/: jinx-working-patch.patch
patches/ncurses/: jinx-working-patch.patch
patches/neofetch/: jinx-working-patch.patch
patches/nspr/: jinx-working-patch.patch
patches/nss/: jinx-working-patch.patch
patches/openjdk17/: jinx-working-patch.patch
patches/openssl/: jinx-working-patch.patch
patches/poppler/: jinx-working-patch.patch
patches/python/: jinx-working-patch.patch
patches/qemu/: jinx-working-patch.patch
patches/readline/: jinx-working-patch.patch
patches/slim/: jinx-working-patch.patch
patches/tyrquake/: jinx-working-patch.patch
patches/vte/: jinx-working-patch.patch
patches/vulkan-icd-loader/: jinx-working-patch.patch
patches/vulkan-tools/: jinx-working-patch.patch
patches/xf86-input-evdev/: jinx-working-patch.patch
patches/xorg-proto/: jinx-working-patch.patch
patches/xorg-server/: jinx-working-patch.patch
patches/xterm/: jinx-working-patch.patch
patches/zlib/: jinx-working-patch.patch
recipes/: alsa-lib  at-spi2-core  atril  base  bash  cglm  coreutils  cshim  cups  curl  dbus  doomgeneric  dsda-doom  evtest  example  fox  frigg  gcc  glib2  iana-etc  init  jwm  kernel  libatomic  libconfig  libev  libevdev  libgcc  libgpg-error  libstdc++  libzip  limine  links  linux-headers  mangohud  mate-session-manager  mesa  mesa-demos  mlibc  mlibc-headers  (+27 more)
source-recipes/: gnulib  libtool-host  xorg-font-util
src/: ioports.hpp  kernel.cpp  limine.hpp  panic.hpp  stivale2.h  terminal.cpp  terminal.hpp  types.hpp  ubsan.cpp
src/acpi/: tables.cpp  tables.hpp
src/cpu/: cpu.cpp  cpu.hpp
src/elf/: elf.cpp  elf.hpp
src/fb/: framebuffer.cpp  framebuffer.hpp
src/fs/: initramfs.cpp  initramfs.hpp  tmpfs.cpp  tmpfs.hpp  vfs.cpp  vfs.hpp
src/gfx/: framebuffer.cpp  framebuffer.hpp  terminal.cpp  terminal.hpp
src/klib/: algorithm.hpp  bitmap.hpp  cppruntime.cpp  cstdio.cpp  cstdio.hpp  cstdlib.cpp  cstdlib.hpp  cstring.cpp  cstring.hpp  error.hpp  functional.hpp  hash.hpp  hashmap.hpp  list.hpp  lock.hpp  mem.asm  posix.hpp  ring_buffer.hpp  string.hpp  types.hpp  vector.hpp
src/kstd/: algorithm.hpp  bitmap.cpp  (+19 more)
(+72 files in other folders)
